tests/basic/post/prim/060.pan.out
tests/basic/post/prim/060.pan:2:7-11: error: invalid subtype: ğŸ™ <: ğ•Š
tests/basic/post/prim/060.pan:5:7-11: error: invalid subtype: ğ”¹ <: ğ•Š
tests/basic/post/prim/060.pan:8:7-8: error: invalid subtype: â„¤ <: ğ•Š