tests/basic/post/prim/060.pan
f60 : {v:string|?}
f60 = unit

f61 : {v:string|?}
f61 = true

f62 : {v:string|?}
f62 = 1

f63 : {v:string|?}
f63 = 'a'
